# campaign-orchestrator

./: .gitignore  README.md  docker-compose.yml
agent/: Dockerfile  pyproject.toml  rag_client.py
agent/agent/: graph.py  run.py  state.py
agent/agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent/agent/nodes/: _config.py  content.py  publisher.py  research.py  scheduler.py
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_enable_pgvector.py  002_initial_schema.py  003_rag_support.py  004_campaign_execution.py  005_publish_support.py  006_phase4_scale.py  0d6824ffe53d_create_tables.py  3a21dc58b464_create_tables.py  8fc6630a89d6_enable_pgvector.py  a5ac5260fc5f_initial_schema.py
backend/app/: celery_app.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  campaigns.py  contents.py  documents.py  health.py  knowledge_bases.py  workspaces.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  agent_log.py  agent_run.py  campaign.py  (+9 more)
backend/app/schemas/: agent.py  analytics.py  approve.py  campaign.py  common.py  content.py  document.py  execute.py  health.py  knowledge_base.py  research.py  retrieve.py  workspace.py
backend/app/services/: analytics.py  campaign_executor.py  campaign_stream.py  embeddings.py  event_bus.py  publisher.py  rag.py  rate_limiter.py  scheduling.py  storage.py
backend/app/tasks/: analytics.py  ingestion.py  publishing.py
backend/scripts/: seed_engagement_history.py
(+60 files in other folders)
