[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "langchain-core>=1.4.1",
    "langchain-google-genai>=2.0.0",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langsmith>=0.8.9",
    "psycopg-pool>=3.2.0",
    "tavily-python>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]
